Fix horizontal alignment of spotlight

--- a/css/styles.css
+++ b/css/styles.css
@@ -11734,6 +11734,8 @@ a {
   position: relative;
   transform: translateY(-50%);
   max-height: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .yt-spotlight  iframe {
